# simple_warp_api

./: Cargo.toml  Makefile  README.md  docker_compose.yml
api_collection/: Ask Question.bru  Get Question.bru  Update Question.bru  bruno.json
migrations/: 20240101194144_questions_table.up.sql
src/: main.rs  profanity.rs  store.rs
src/helpers/: lib.rs
src/routes/: answer.rs  authentication.rs  question.rs
src/types/: account.rs  pagination.rs
